// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Tooltip/TooltipIcon Just Text 1`] = `
<div
  id="root"
>
  <div
    class="MuiContainer-root makeStyles-container MuiContainer-maxWidthLg"
  >
    <svg
      class=""
      focusable="false"
      height="1em"
      preserveAspectRatio="xMidYMid meet"
      style="transform: rotate(360deg);"
      title="This is the text"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M11 9h2V7h-2m1 13c-4.41 0-8-3.59-8-8s3.59-8 8-8s8 3.59 8 8s-3.59 8-8 8m0-18A10 10 0 0 0 2 12a10 10 0 0 0 10 10a10 10 0 0 0 10-10A10 10 0 0 0 12 2m-1 15h2v-6h-2v6z"
        fill="currentColor"
      />
    </svg>
  </div>
</div>
`;

exports[`Storyshots Tooltip/TooltipIcon With Icon 1`] = `
<div
  id="root"
>
  <div
    class="MuiContainer-root makeStyles-container MuiContainer-maxWidthLg"
  >
    <svg
      class=""
      focusable="false"
      height="1em"
      preserveAspectRatio="xMidYMid meet"
      style="transform: rotate(360deg);"
      title="Some other text"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M17 13h-4v4h-2v-4H7v-2h4V7h2v4h4m-5-9A10 10 0 0 0 2 12a10 10 0 0 0 10 10a10 10 0 0 0 10-10A10 10 0 0 0 12 2z"
        fill="currentColor"
      />
    </svg>
  </div>
</div>
`;
